# scantailor

filters/page_split/: Task.cpp
src/app/: CMakeLists.txt
src/app_cli/: CMakeLists.txt
src/core/filters/page_split/: Task.cpp
